--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,11 @@
     "support": "Поддержка",
     "privacy": "Политика конфиденциальности",
     "terms": "Условия использования",
+    "refunds": "Политика возврата",
+    "back_to_home": "На главную",
+    "something_went_wrong": "Что-то пошло не так",
+    "google_auth_error": "Ошибка входа Google",
+    "apple_auth_error": "Ошибка входа Apple",
     "rights_reserved": "Все права защищены.",
     "or": "Или",
     "email": "Email",
@@ -143,6 +148,7 @@
     "share_error": "Ошибка при попытке поделиться",
     "save": "Сохранить",
     "share": "Поделиться",
+    "compare": "Сравнить",
     "deploy": "Деплой",
     "image_dropzone": {
       "error_type": "Поддерживаются только изображения (JPG, PNG, GIF, WebP)",
@@ -304,19 +310,19 @@
   },
   "refunds_page": {
     "title": "Политика возврата средств",
-    "last_updated": "Последнее обновление: 16 декабря 2025",
-    "intro": "Loverlay предоставляет цифровые товары (оверлеи). В связи с природой цифровых продуктов, возвраты обрабатываются иначе, чем физические товары.",
+    "last_updated": "Последнее обновление: 23 декабря 2025",
+    "intro": "Loverlay предоставляет цифровые товары (оверлеи).\n\nМы предлагаем 14-дневное окно для возврата средств в соответствии с политикой возврата Paddle и применимыми законами о защите прав потребителей.",
     "conditions": {
       "title": "Условия возврата",
-      "text": "Возврат может быть осуществлен в следующих случаях:\n1. Технический дефект: Продукт технически неисправен, и мы не можем решить проблему.\n2. Двойное списание: С вас была списана двойная плата за один и тот же продукт из-за технической ошибки.\n3. Требование закона: В случаях, предусмотренных применимым законодательством о защите прав потребителей."
+      "text": "Вы можете запросить возврат средств в течение 14 дней с момента покупки в следующих случаях:\n1. Вы не удовлетворены продуктом.\n2. Продукт не соответствует вашим ожиданиям.\n3. В продукте есть технические проблемы, которые невозможно решить.\n4. С вас дважды списали средства из-за технической ошибки.\n5. Возврат требуется по закону.\n\nПо истечении 14-дневного периода возврат средств обычно не производится."
     },
     "how_to": {
       "title": "Как запросить возврат",
-      "text": "Пожалуйста, свяжитесь с нами по адресу support@loverlay.com, указав детали заказа. Мы рассматриваем запросы на возврат в течение 3 рабочих дней."
+      "text": "Чтобы запросить возврат, пожалуйста, свяжитесь с нами в течение 14 дней с момента покупки по адресу support@loverlay.com и укажите детали вашего заказа. Мы рассматриваем запросы на возврат в течение 3 рабочих дней."
     },
     "non_refundable": {
-      "title": "Невозвратные случаи",
-      "text": "Возврат обычно не производится в случае, если вы 'передумали', или если продукт был успешно получен/скачан и соответствует описанию."
+      "title": "Доступ и использование",
+      "text": "Покупая и скачивая наши цифровые продукты, вы подтверждаете, что цифровой контент доставляется сразу после покупки. Это не влияет на ваше законное право запросить возврат средств в течение 14-дневного периода."
     }
   },
   "terms_page": {
