feat: improve editor UX, icons and deployment info visibility
- Replace overlay rendering logic from 'contain' to 'cover' for full image fill
- Add @phosphor-icons/react and replace delete/remove icons
- Update rotation cursor to modern circular arrow style
- Improve editor toolbar: add tooltips, fix z-index, optimize button placement
- Restrict deployment info visibility to admins only (Header, AdminTopbar)
- Hide footer on the main editor page
- Add translations for 'Hide' button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -148,7 +148,8 @@
     "share_error": "Error sharing",
     "save": "Save",
     "share": "Share",
-    "compare": "Hide",
+    "hide": "Hide",
+    "compare": "Compare",
     "deploy": "Deploy",
     "image_dropzone": {
       "error_type": "Only images (JPG, PNG, GIF, WebP) are supported",
