--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -148,6 +148,7 @@
     "share_error": "Ошибка при попытке поделиться",
     "save": "Сохранить",
     "share": "Поделиться",
+    "hide": "Скрыть",
     "compare": "Сравнить",
     "deploy": "Деплой",
     "image_dropzone": {
