--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -139,6 +139,8 @@
     "flip_h": "По горизонтали",
     "flip_v": "По вертикали",
     "remove": "Удалить",
+    "settings": "Настройки",
+    "fit_to_canvas": "Вписать в холст",
     "canvas_context_error": "Не удалось получить контекст canvas",
     "image_load_error": "Не удалось загрузить изображение",
     "save_error": "Ошибка при сохранении изображения",
