ui: unify design system tokens and styles across the app
- Implement unified surfaces, radii, shadows, and spacing tokens

- Update AuthModal, LanguageSwitcher, Header, and Footer to use tokens

- Harmonize LandingPage and PricingPage with the new design system

- Add admin panel i18n support

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -351,5 +351,15 @@
         "refund_link": "Политика возврата"
       }
     }
+  },
+  "admin": {
+    "title": "Администрирование",
+    "back_to_editor": "Вернуться в редактор",
+    "dashboard": "Дашборд",
+    "categories": "Категории",
+    "sets": "Наборы",
+    "users": "Пользователи",
+    "purchases": "Покупки",
+    "settings": "Настройки"
   }
 }
