--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -351,5 +351,15 @@
         "refund_link": "Refund Policy"
       }
     }
+  },
+  "admin": {
+    "title": "Administration",
+    "back_to_editor": "Back to Editor",
+    "dashboard": "Dashboard",
+    "categories": "Categories",
+    "sets": "Sets",
+    "users": "Users",
+    "purchases": "Purchases",
+    "settings": "Settings"
   }
 }
